# small-video-record

./: .gitignore  .gitmodules  1.x_use_help.md  2.x_use_help.md  LICENSE  README.md  build.gradle
SmallVideoRecord2/SmallVideoLib2/: CMakeLists.txt  build.gradle  proguard-rules.pro
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/: config.asm  config.fate  config.h  config.mak  configure  jianxi_ffmpeg_android.sh
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/android/armv7-a-vfp/include/libavutil/: ffversion.h
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/android/armv7-a-vfp/lib/pkgconfig/: libswscale.pc
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/doc/: avoptions_format.texi  config.texi  fate.txt  fate.txt.d  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-codecs.pod.d  ffmpeg-filters.1  ffmpeg-filters.pod  ffmpeg-formats.1  ffmpeg-formats.pod  ffmpeg-formats.pod.d  ffmpeg-protocols.1  ffmpeg-protocols.pod  ffmpeg-resampler.1  ffmpeg-resampler.pod  ffmpeg-resampler.pod.d  ffmpeg-scaler.pod  ffmpeg-scaler.pod.d  ffmpeg-utils.pod.d  libavcodec.3  libavcodec.pod  libavfilter.pod  libavformat.3  libavformat.pod  libavutil.pod  libswresample.3  libswresample.pod  libswscale.3  libswscale.pod  print_options
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/doc/examples/pc-uninstalled/: libavcodec.pc  libavdevice.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libavcodec/: 4xm.d  8bps.d  8svx.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacadtsdec.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsdsp_float.d  aacpsy.d  aacsbr.d  aactab.d  ac3.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adx.d  adx_parser.d  adxdec.d  adxenc.d  aic.d  alacdsp.d  alacenc.d  aliaspixdec.d  allcodecs.d  (+553 more)
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libavdevice/: alldevices.d  avdevice.d  fbdev_common.d  fbdev_dec.d  fbdev_enc.d  lavfi.d  libavdevice.pc  libavdevice.ver  v4l2-common.d  v4l2.d  v4l2enc.d
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libavfilter/: aeval.d  af_acrusher.d  af_adelay.d  af_aecho.d  af_afade.d  af_afftfilt.d  af_alimiter.d  af_amerge.d  af_amix.d  af_anequalizer.d  af_anull.d  af_apad.d  af_apulsator.d  af_aresample.d  af_ashowinfo.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  af_chorus.d  af_compand.d  af_compensationdelay.d  af_dynaudnorm.d  af_earwax.d  af_extrastereo.d  af_firequalizer.d  af_flanger.d  af_hdcd.d  af_pan.d  af_replaygain.d  af_sidechaincompress.d  af_silencedetect.d  af_silenceremove.d  af_stereotools.d  af_stereowiden.d  af_tremolo.d  af_volume.d  af_volumedetect.d  asrc_sine.d  audio.d  (+160 more)
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libavformat/: 3dostr.d  4xm.d  a64.d  aacdec.d  aadec.d  ac3dec.d  acm.d  act.d  adp.d  adxdec.d  aea.d  afc.d  aiffdec.d  aiffenc.d  aixdec.d  allformats.d  amr.d  anm.d  apc.d  ape.d  apetag.d  apngdec.d  apngenc.d  aqtitledec.d  asf.d  asfcrypt.d  asfdec_f.d  asfdec_o.d  asfenc.d  assenc.d  ast.d  astdec.d  astenc.d  async.d  au.d  avc.d  avidec.d  avienc.d  avio.d  avlanguage.d  (+315 more)
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libavutil/: adler32.d  aes.d  aes_ctr.d  audio_fifo.d  avstring.d  base64.d  blowfish.d  bprint.d  buffer.d  cast5.d  channel_layout.d  color_utils.d  cpu.d  des.d  display.d  downmix_info.d  fifo.d  file.d  file_open.d  fixed_dsp.d  float_dsp.d  hash.d  hwcontext.d  imgutils.d  integer.d  lfg.d  libavutil.pc  libavutil.ver  lls.d  log.d  lzo.d  mastering_display_metadata.d  mathematics.d  md5.d  mem.d  murmur3.d  opt.d  parseutils.d  pixdesc.d  random_seed.d  (+10 more)
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libpostproc/: libpostproc.pc  libpostproc.ver  postprocess.d
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libswresample/: audioconvert.d  dither.d  libswresample.pc  libswresample.so.2  libswresample.ver  log2_tab.d  options.d  resample.d  swresample.d  swresample_frame.d
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/libswscale/: alphablend.d  gamma.d  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.ver  log2_tab.d  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  vscale.d  yuv2rgb.d
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/mylib/include/fdk-aac/: FDK_audio.h  aacdecoder_lib.h  aacenc_lib.h  genericStds.h  machine_type.h
SmallVideoRecord2/SmallVideoLib2/ffmpeg-3.2.5/tests/ref/fate/: sub-aqtitle  sub-cc  sub-cc-realtime  sub-charenc  sub-jacosub  sub-microdvd  sub-movtext  sub-mpl2  sub-mpsub  sub-mpsub-frames  sub-pjs  sub-realtext  sub-sami  sub-sami2  sub-srt  sub-stl  sub-subripenc  sub-subviewer  sub-subviewer1  sub-textenc  sub-vplayer  sub-webvtt  sub-webvtt2
SmallVideoRecord2/SmallVideoLib2/src/main/: AndroidManifest.xml
SmallVideoRecord2/SmallVideoLib2/src/main/cpp/: base_include.h  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  jx_ffmpeg_cmd_run.c  jx_ffmpeg_cmd_run.h  jx_ffmpeg_config.cpp  jx_ffmpeg_config.h  jx_ffmpeg_jni.cpp  jx_jni_handler.cpp  jx_jni_handler.h  jx_log.cpp  jx_log.h  jx_media_muxer.cpp  jx_media_muxer.h  jx_pcm_encode_aac.cpp  jx_pcm_encode_aac.h  jx_user_arguments.h  jx_yuv_encode_h264.cpp  jx_yuv_encode_h264.h  threadsafe_queue.cpp
SmallVideoRecord2/SmallVideoLib2/src/main/cpp/include/compat/: strtod.d
SmallVideoRecord2/SmallVideoLib2/src/main/cpp/include/libavcodec/: avcodec.h  vdpau.h  version.h
SmallVideoRecord2/SmallVideoLib2/src/main/cpp/include/libavfilter/: avfilter.h  avfiltergraph.h  version.h
SmallVideoRecord2/SmallVideoLib2/src/main/cpp/include/libavformat/: avformat.h  avio.h  network.h  (+2 more)
SmallVideoRecord2/SmallVideoLib2/src/main/res/drawable/: record_delete_selector.xml  small_video_shoot.xml
SmallVideoRecord2/SmallVideoLib2/src/main/res/layout/: activity_main.xml  activity_media_recorder.xml
SmallVideoRecord2/SmallVideoLib2/src/main/res/values/: colors.xml  strings.xml
(+419 files in other folders)
